kubernetes/apps/kind/httpbin/vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: httpbin
spec:
  gateways:
  - istio-ingress/mesh-gateway
  hosts:
    - httpbin.kind.com
  http:
  - match:
    - uri:
        prefix: /
    name: httpbin
    route:
    - destination:
        host: httpbin.httpbin.svc.cluster.local
        port:
          number: 8000
